--- a/index.html
+++ b/index.html
@@ -695,6 +695,8 @@ body {
     </table>
         </div>
     <div class="total-proxy" id="total-proxy"></div>
+    <div class="total-proxy" id="filtered-proxy"></div>
+
     <div class="pagination" id="pagination"></div>
   </div> 
 <div class="popup" id="sub-link">
