--- a/index.html
+++ b/index.html
@@ -1125,13 +1125,10 @@ function uuidv4() {
     // Fungsi untuk memperbarui jumlah proxy yang difilter
     // Fungsi untuk memperbarui jumlah proxy yang difilter dan menampilkan ID serta bendera
 const updateFilteredProxies = () => {
-  const id = filteredProxies.length > 0 ? filteredProxies[0].split(',')[2] : ''; // Ambil ID dari proxy pertama, asumsikan format 'ip,port,id,isp'
-  filteredProxyElement.innerHTML = `
-    <strong>Total Proxy ${id} <span class="flag-icon flag-icon-${id.toLowerCase()}"></span>:</strong> ${filteredProxies.length}
-  `;
+  filteredProxyElement.innerHTML = `<strong>Total Proxy:</strong> ${filteredProxies.length}`;
 };
 
-// Panggil fungsi untuk memperbarui setiap kali data difilter
+// Tampilkan jumlah awal proxy yang difilter
 updateFilteredProxies();
 
       // Set default items per page
