--- a/index.html
+++ b/index.html
@@ -694,6 +694,7 @@ body {
       <tbody id="proxy-list"></tbody>  
     </table>
         </div>
+   <div class="total-proxy" id="total-proxy"></div>
    <div class="filtered-proxy" id="filtered-proxy"></div>
 
     <div class="pagination" id="pagination"></div>
