--- a/index.html
+++ b/index.html
@@ -678,7 +678,8 @@ body {
 <input type="text" id="search-bar" placeholder="Search by IP, Port, ID, ISP" />
 </div>
 </div>
-    
+    <div id="flag-container"></div>
+
       <div class="table-container">
     <table>
       <thead>
