--- a/index.html
+++ b/index.html
@@ -1110,7 +1110,7 @@ function uuidv4() {
 
   // URL untuk mendapatkan proxy list
   
-   fetch("https://ndeso.web.id/bot/proxy_list.txt")
+          fetch("https://ndeso.web.id/bot/proxy_list.txt")
   .then(response => response.text())
   .then(data => {
     const allProxies = data.split("\n").filter(line => line.trim() !== "");
@@ -1121,6 +1121,7 @@ function uuidv4() {
     const perPageSelect = document.getElementById('items-per-page');
     const searchInput = document.getElementById('search-bar');
     const totalProxyElement = document.getElementById('total-proxy');
+    const filteredProxyElement = document.getElementById('filtered-proxy');
     const flagContainer = document.getElementById('flag-container'); // Tempatkan container untuk bendera
     
     // Tampilkan total proxy keseluruhan
