--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@ body {
 </div>
       <div>
 <span class="filter-label">Search:</span>
-<input type="text" id="search-bar" placeholder="Search by IP, Port, ID, ISP" />
+<input type="text" id="search-bar" placeholder="Search ID" />
 </div>
 </div>
     <div id="flag-container"></div>
@@ -1149,7 +1149,7 @@ function uuidv4() {
     searchInput.addEventListener('input', () => {
       const query = searchInput.value.toLowerCase();
       filteredProxies = allProxies.filter(proxy => {
-        const [ip, port, id, isp] = proxy.split(',');
+        const [id] = proxy.split(',');
         return id.toLowerCase().includes(query);
       });
       updateFilteredProxies(); // Update jumlah proxy setelah pencarian
