--- a/index.html
+++ b/index.html
@@ -1123,7 +1123,7 @@ function uuidv4() {
     const filteredProxyElement = document.getElementById('filtered-proxy');
 
     // Tampilkan total proxy keseluruhan
-    totalProxyElement.innerHTML = `<strong>Total Proxies:</strong> ${allProxies.length}`;
+    totalProxyElement.innerHTML = `<strong>${allProxies.length}</strong> `;
 
     // Fungsi untuk memperbarui jumlah proxy yang difilter dan menampilkan ID serta bendera
     const updateFilteredProxies = () => {
